--- a/webgear-server/webgear-server.cabal
+++ b/webgear-server/webgear-server.cabal
@@ -3,11 +3,9 @@ name:                webgear-server
 version:             1.0.0
 synopsis:            Composable, type-safe library to build HTTP API servers
 description:
-        WebGear is a library to for building composable, type-safe HTTP API servers.
-
-        WebGear focuses on good documentation and usability.
-
-        See the documentation of WebGear module to get started.
+    WebGear is a library to for building composable, type-safe HTTP API servers.
+    WebGear focuses on good documentation and usability. See the documentation
+    of WebGear module to get started.
 homepage:            https://github.com/haskell-webgear/webgear-server#readme
 bug-reports:         https://github.com/haskell-webgear/webgear-server/issues
 author:              Raghu Kaippully
@@ -18,7 +16,7 @@ license-file:        LICENSE
 category:            Web
 build-type:          Simple
 extra-source-files:  README.md
-                     ChangeLog.md
+                     CHANGELOG.md
 
 
 source-repository head
