Provide top level modules to enable smaller import lists

--- a/webgear-core/webgear-core.cabal
+++ b/webgear-core/webgear-core.cabal
@@ -90,7 +90,7 @@ common webgear-common
 
 library
   import:             webgear-common
-  exposed-modules:    WebGear
+  exposed-modules:    WebGear.Core
                     , WebGear.Core.Modifiers
                     , WebGear.Core.Trait
                     , WebGear.Core.Request
