--- a/webgear-openapi/webgear-openapi.cabal
+++ b/webgear-openapi/webgear-openapi.cabal
@@ -28,15 +28,15 @@ source-repository head
 library
   exposed-modules:    WebGear.OpenApi
                     , WebGear.OpenApi.Handler
-                    , WebGear.OpenApi.Middlewares
-                    , WebGear.OpenApi.Middleware.Auth.Basic
-                    , WebGear.OpenApi.Middleware.Auth.JWT
-                    , WebGear.OpenApi.Middleware.Body
-                    , WebGear.OpenApi.Middleware.Header
-                    , WebGear.OpenApi.Middleware.Method
-                    , WebGear.OpenApi.Middleware.Path
-                    , WebGear.OpenApi.Middleware.QueryParam
-                    , WebGear.OpenApi.Middleware.Status
+                    , WebGear.OpenApi.Traits
+                    , WebGear.OpenApi.Trait.Auth.Basic
+                    , WebGear.OpenApi.Trait.Auth.JWT
+                    , WebGear.OpenApi.Trait.Body
+                    , WebGear.OpenApi.Trait.Header
+                    , WebGear.OpenApi.Trait.Method
+                    , WebGear.OpenApi.Trait.Path
+                    , WebGear.OpenApi.Trait.QueryParam
+                    , WebGear.OpenApi.Trait.Status
   hs-source-dirs:     src
   default-language:   Haskell2010
   default-extensions: Arrows
