--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,8 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  release:
+    types: [published]
 
 jobs:
   stack-build:
@@ -65,10 +67,9 @@ jobs:
         run: stack sdist --system-ghc --ignore-check
 
       - name: Upload to Hackage
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: matrix.ghc == '9.0.1' && matrix.os == 'ubuntu-latest' && startsWith(github.ref, 'refs/tags/v')
         run: |
-          export HACKAGE_USERNAME="rkaippully"
-          export HACKAGE_PASSWORD="${{ secrets.HACKAGE_TOKEN }}"
+          export HACKAGE_KEY="${{ secrets.HACKAGE_TOKEN }}"
           stack upload --system-ghc --ignore-check webgear-core
           stack upload --system-ghc --ignore-check webgear-server
           stack upload --system-ghc --ignore-check webgear-openapi
