--- a/webgear-openapi/webgear-openapi.cabal
+++ b/webgear-openapi/webgear-openapi.cabal
@@ -72,7 +72,7 @@ library
                     , http-types ==0.12.*
                     , insert-ordered-containers ==0.2.*
                     , lens >=4.18.1 && <5.2
-                    , openapi3 ==3.1.*
+                    , openapi3 >=3.1.0 && <3.3
                     , text ==1.2.*
                     , webgear-core ==1.0.0
   ghc-options:        -Wall
