Upgrade all deps

--- a/webgear-core/webgear-core.cabal
+++ b/webgear-core/webgear-core.cabal
@@ -1,7 +1,7 @@
 cabal-version:       2.4
 
 name:                webgear-core
-version:             1.0.0
+version:             1.0.1
 synopsis:            Composable, type-safe library to build HTTP APIs
 description:
         WebGear is a library to for building composable, type-safe HTTP APIs.
@@ -64,7 +64,7 @@ common webgear-common
                     , safe-exceptions ==0.1.*
                     , tagged ==0.8.*
                     , template-haskell >=2.15.0.0 && <2.19
-                    , text ==1.2.*
+                    , text >=1.2.0.0 && <2.1
                     , unordered-containers ==0.2.*
                     , wai ==3.2.*
   ghc-options:        -Wall
