--- a/webgear-openapi/webgear-openapi.cabal
+++ b/webgear-openapi/webgear-openapi.cabal
@@ -1,7 +1,7 @@
 cabal-version:       2.4
 
 name:                webgear-openapi
-version:             1.0.0
+version:             1.0.1
 synopsis:            Composable, type-safe library to build HTTP API servers
 description:
     WebGear is a library to for building composable, type-safe HTTP API servers.
@@ -73,8 +73,8 @@ library
                     , insert-ordered-containers ==0.2.*
                     , lens >=4.18.1 && <5.2
                     , openapi3 >=3.1.0 && <3.3
-                    , text ==1.2.*
-                    , webgear-core ==1.0.0
+                    , text >=1.2.0.0 && <2.1
+                    , webgear-core ==1.0.1
   ghc-options:        -Wall
                       -Wno-unticked-promoted-constructors
                       -Wcompat
