--- a/webgear-server/webgear-server.cabal
+++ b/webgear-server/webgear-server.cabal
@@ -1,6 +1,6 @@
 cabal-version:       2.4
 name:                webgear-server
-version:             1.0.0
+version:             1.0.1
 synopsis:            Composable, type-safe library to build HTTP API servers
 description:
     WebGear is a library to for building composable, type-safe HTTP API servers.
@@ -57,9 +57,9 @@ common webgear-common
                     , base64-bytestring >=1.0.0.3 && <1.3
                     , bytestring >=0.10.10.1 && <0.12
                     , http-types ==0.12.*
-                    , text ==1.2.*
+                    , text >=1.2.0.0 && <2.1
                     , wai ==3.2.*
-                    , webgear-core ==1.0.0
+                    , webgear-core ==1.0.1
   ghc-options:        -Wall
                       -Wno-unticked-promoted-constructors
                       -Wcompat
