--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -98,14 +98,14 @@ jobs:
             ghc: 8.10.7
 
     steps:
-      - uses: actions/checkout@v3
-        name: Checkout Source Code
+      - name: Checkout Source Code
+        uses: actions/checkout@v3
 
-      - uses: cachix/install-nix-action@v17
-        name: Install Nix
+      - name: Install Nix
+        uses: cachix/install-nix-action@v17
 
-      - uses: cachix/cachix-action@v10
-        name: Set up Cachix
+      - name: Set up Cachix
+        uses: cachix/cachix-action@v10
         with:
           name: haskell-webgear
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
