--- a/webgear-server/webgear-server.cabal
+++ b/webgear-server/webgear-server.cabal
@@ -1,6 +1,6 @@
 cabal-version:       2.4
 name:                webgear-server
-version:             1.0.3
+version:             1.0.4
 synopsis:            Composable, type-safe library to build HTTP API servers
 description:
     WebGear is a library to for building composable, type-safe HTTP API servers.
@@ -53,13 +53,13 @@ common webgear-common
                       TypeApplications
                       TypeFamilies
                       TypeOperators
-  build-depends:      base >=4.13.0.0 && <4.17
+  build-depends:      base >=4.13.0.0 && <4.18
                     , base64-bytestring >=1.0.0.3 && <1.3
                     , bytestring >=0.10.10.1 && <0.12
                     , http-types ==0.12.*
                     , text >=1.2.0.0 && <2.1
                     , wai ==3.2.*
-                    , webgear-core ==1.0.3
+                    , webgear-core ==1.0.4
   ghc-options:        -Wall
                       -Wno-unticked-promoted-constructors
                       -Wcompat
@@ -92,14 +92,14 @@ library
   other-modules:      Paths_webgear_server
   autogen-modules:    Paths_webgear_server
   hs-source-dirs:     src
-  build-depends:      aeson >=1.4 && <1.6 || >=2.0 && <2.1
+  build-depends:      aeson >=1.4 && <1.6 || >=2.0 && <2.2
                     , arrows ==0.4.*
                     , bytestring-conversion ==0.3.*
                     , http-api-data >=0.4.2 && <0.6
                     , http-media ==0.8.*
                     , jose >=0.8.3.1 && <0.10
-                    , monad-time ==0.3.*
-                    , mtl ==2.2.*
+                    , monad-time >=0.3.0.0 && <0.5
+                    , mtl >=2.2 && <2.4
                     , unordered-containers ==0.2.*
 
 test-suite webgear-server-test
