Moved benchmarks to monorepo

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -97,6 +97,9 @@ jobs:
           - os: macos-latest
             ghc: 8.10.7
 
+    env:
+      GHC_VERSION=$(echo ${{ matrix.ghc }} | tr -d .)
+
     steps:
       - name: Checkout Source Code
         uses: actions/checkout@v3
@@ -112,5 +115,13 @@ jobs:
 
       - name: Build Packages
         run: |
-          GHC_VERSION=$(echo ${{ matrix.ghc }} | tr -d .)
-          nix build -L --no-link .#webgear-core-ghc${GHC_VERSION} .#webgear-server-ghc${GHC_VERSION} .#webgear-openapi-ghc${GHC_VERSION}
+          nix build --print-build-logs --no-link   \
+            .#webgear-core-ghc${GHC_VERSION}       \
+            .#webgear-server-ghc${GHC_VERSION}     \
+            .#webgear-openapi-ghc${GHC_VERSION}    \
+            .#webgear-benchmarks-ghc${GHC_VERSION}
+
+      - name: Benchmark
+        run: |
+          BENCHMARK=$(nix build --no-link --json .#webgear-benchmarks-ghc${GHC_VERSION} | jq -r .[].outputs.out)
+          ${BENCHMARK}/bin/users
