--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -123,4 +123,4 @@ jobs:
         run: |
           GHC_VERSION=$(echo ${{ matrix.ghc }} | tr -d .)
           BENCHMARK=$(nix build --no-link --json .#webgear-benchmarks-ghc${GHC_VERSION} | jq -r .[].outputs.out)
-          ${BENCHMARK}/bin/users
+          ${BENCHMARK}/bin/users +RTS -N -RTS
