--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -113,4 +113,14 @@ jobs:
       - name: Build Packages
         run: |
           GHC_VERSION=$(echo ${{ matrix.ghc }} | tr -d .)
-          nix build -L --no-link .#webgear-core-ghc${GHC_VERSION} .#webgear-server-ghc${GHC_VERSION} .#webgear-openapi-ghc${GHC_VERSION}
+          nix build --print-build-logs --no-link   \
+            .#webgear-core-ghc${GHC_VERSION}       \
+            .#webgear-server-ghc${GHC_VERSION}     \
+            .#webgear-openapi-ghc${GHC_VERSION}    \
+            .#webgear-benchmarks-ghc${GHC_VERSION}
+
+      - name: Benchmark
+        run: |
+          GHC_VERSION=$(echo ${{ matrix.ghc }} | tr -d .)
+          BENCHMARK=$(nix build --no-link --json .#webgear-benchmarks-ghc${GHC_VERSION} | jq -r .[].outputs.out)
+          ${BENCHMARK}/bin/users +RTS -N -RTS
