--- a/webgear-benchmarks/webgear-benchmarks.cabal
+++ b/webgear-benchmarks/webgear-benchmarks.cabal
@@ -19,19 +19,19 @@ source-repository head
 
 executable users
   default-language:   Haskell2010
-  build-depends:      aeson >=1.5 && <2.1
+  build-depends:      aeson >=1.5 && <2.2
                     , base >=4.14.0.0 && <5
                     , bytestring >=0.10 && <0.12
-                    , criterion ==1.5.*
+                    , criterion >=1.5.0.0 && <1.7
                     , hashable >=1.3 && <1.5
                     , http-types ==0.12.3
-                    , mtl ==2.2.2
-                    , text ==1.2.*
+                    , mtl >=2.2.2 && <2.4
+                    , text >=1.2.0.0 && <2.1
                     , time
                     , unordered-containers ==0.2.*
-                    , servant ==0.19
-                    , servant-server ==0.19.1
-                    , scotty ==0.12
+                    , servant ==0.19.1
+                    , servant-server ==0.19.2
+                    , scotty ==0.12.1
                     , wai ==3.2.3
                     , webgear-server ==1.0.4
   default-extensions: Arrows
