Build haddock for webgear packages only
webgear-benchmarks has a dependency on scotty-0.20.1 which fails
haddock on GHC 8.10.7. Skip building it

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -115,4 +115,4 @@ jobs:
         run: stack test --system-ghc --ta '--quickcheck-tests 100000'
 
       - name: Haddock
-        run: stack haddock --system-ghc
+        run: stack haddock --system-ghc webgear-core webgear-server webgear-openapi
