--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
+      - release-*
   pull_request:
     branches:
       - main
+      - release-*
   release:
     types:
       - published
@@ -22,8 +24,9 @@ jobs:
         os:
           - ubuntu-latest
         ghc:
-          - 9.4.4
-          - 9.2.6
+          - 9.6.2
+          - 9.4.6
+          - 9.2.8
           - 9.0.2
           - 8.10.7
 
@@ -76,9 +79,10 @@ jobs:
         os:
           - ubuntu-latest
         ghc:
-          # Stack 9.4.4 is broken because bytestring-conversion is missing from snapshot
-          # - 9.4.4
-          - 9.2.6
+          - 9.6.3
+          # Stack 9.4 is broken because bytestring-conversion is missing from snapshot
+          # - 9.4.7
+          - 9.2.8
           - 9.0.2
           - 8.10.7
 
@@ -111,4 +115,4 @@ jobs:
         run: stack test --system-ghc --ta '--quickcheck-tests 100000'
 
       - name: Haddock
-        run: stack haddock --system-ghc
+        run: stack haddock --system-ghc webgear-core webgear-server webgear-openapi
