Added a new package webgear-swagger
Mostly just a copy of webgear-openapi

--- a/cabal.project
+++ b/cabal.project
@@ -1,4 +1,5 @@
 packages: webgear-core/
           webgear-server/
+          webgear-swagger/
           webgear-openapi/
           webgear-benchmarks/
