--- a/stack-9.0.2.yaml
+++ b/stack-9.0.2.yaml
@@ -3,6 +3,7 @@ resolver: lts-19.33
 packages:
   - ./webgear-core
   - ./webgear-server
+  - ./webgear-swagger
   - ./webgear-openapi
   - ./webgear-benchmarks
 
