--- a/stack-9.2.8.yaml
+++ b/stack-9.2.8.yaml
@@ -3,6 +3,7 @@ resolver: lts-20.26
 packages:
   - ./webgear-core
   - ./webgear-server
+  - ./webgear-swagger
   - ./webgear-openapi
   - ./webgear-benchmarks
 
