--- a/stack-9.4.7.yaml
+++ b/stack-9.4.7.yaml
@@ -3,5 +3,6 @@ resolver: lts-21.14
 packages:
   - ./webgear-core
   - ./webgear-server
+  - ./webgear-swagger
   - ./webgear-openapi
   - ./webgear-benchmarks
