--- a/stack-9.6.3.yaml
+++ b/stack-9.6.3.yaml
@@ -3,5 +3,6 @@ resolver: nightly-2023-10-04
 packages:
   - ./webgear-core
   - ./webgear-server
+  - ./webgear-swagger
   - ./webgear-openapi
   - ./webgear-benchmarks
