Generalize the handling of body MIME types
- Remove the special `JSONBody` type and associated middlewares.
- Introduce a type level list of MIME types in the `Body` type.
- Introduce common MIME types - `OctetStream`, `PlainText`, and
  `JSON`.

--- a/webgear-openapi/webgear-openapi.cabal
+++ b/webgear-openapi/webgear-openapi.cabal
@@ -63,6 +63,7 @@ library
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskellQuotes
+                      TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
