--- a/webgear-server/webgear-server.cabal
+++ b/webgear-server/webgear-server.cabal
@@ -96,10 +96,10 @@ library
                     , arrows ==0.4.*
                     , bytestring-conversion ==0.3.*
                     , http-api-data >=0.4.2 && <0.7
-                    , http-media ==0.8.*
                     , jose >=0.8.3.1 && <0.11
                     , monad-time >=0.3.0.0 && <0.5
                     , mtl >=2.2 && <2.4
+                    , text-conversions ==0.3.*
 
 test-suite webgear-server-test
   import:             webgear-common
