--- a/webgear-core/webgear-core.cabal
+++ b/webgear-core/webgear-core.cabal
@@ -54,6 +54,7 @@ common webgear-common
                       TypeFamilies
                       TypeOperators
   build-depends:      base >=4.13.0.0 && <4.19
+                    , binary >= 0.8.0.0 && <0.9
                     , bytestring >=0.10.10.1 && <0.13
                     , case-insensitive ==1.2.*
                     , filepath ==1.4.*
@@ -61,11 +62,9 @@ common webgear-common
                     , http-media ==0.8.*
                     , http-types ==0.12.*
                     , network ==3.1.*
-                    , safe-exceptions ==0.1.*
                     , tagged ==0.8.*
                     , template-haskell >=2.15.0.0 && <2.21
                     , text >=1.2.0.0 && <2.2
-                    , unordered-containers ==0.2.*
                     , wai ==3.2.*
   ghc-options:        -Wall
                       -Wno-unticked-promoted-constructors
