Added traits for cookies
Two traits - `Cookie` and `SetCookie` - are added that help in
extracting cookies from requests and setting cookies in responses.

--- a/webgear-openapi/webgear-openapi.cabal
+++ b/webgear-openapi/webgear-openapi.cabal
@@ -32,6 +32,7 @@ library
                     , WebGear.OpenApi.Trait.Auth.Basic
                     , WebGear.OpenApi.Trait.Auth.JWT
                     , WebGear.OpenApi.Trait.Body
+                    , WebGear.OpenApi.Trait.Cookie
                     , WebGear.OpenApi.Trait.Header
                     , WebGear.OpenApi.Trait.Method
                     , WebGear.OpenApi.Trait.Path
