--- a/webgear-core/webgear-core.cabal
+++ b/webgear-core/webgear-core.cabal
@@ -57,7 +57,7 @@ common webgear-common
                     , binary >= 0.8.0.0 && <0.9
                     , bytestring >=0.10.10.1 && <0.13
                     , case-insensitive ==1.2.*
-                    , cookie ==0.4.*
+                    , cookie >=0.4.5 && <0.5
                     , filepath ==1.4.*
                     , http-api-data >=0.4.2 && <0.7
                     , http-media ==0.8.*
