--- a/webgear-server/webgear-server.cabal
+++ b/webgear-server/webgear-server.cabal
@@ -56,6 +56,7 @@ common webgear-common
   build-depends:      base >=4.13.0.0 && <4.19
                     , base64-bytestring >=1.0.0.3 && <1.3
                     , bytestring >=0.10.10.1 && <0.13
+                    , cookie >=0.4.5 && <0.5
                     , http-types ==0.12.*
                     , text >=1.2.0.0 && <2.2
                     , wai ==3.2.*
@@ -84,6 +85,7 @@ library
                     , WebGear.Server.Trait.Auth.Basic
                     , WebGear.Server.Trait.Auth.JWT
                     , WebGear.Server.Trait.Body
+                    , WebGear.Server.Trait.Cookie
                     , WebGear.Server.Trait.Header
                     , WebGear.Server.Trait.Method
                     , WebGear.Server.Trait.Path
