Moved webgear-example-users to the monorepo

--- a/cabal.project
+++ b/cabal.project
@@ -3,3 +3,4 @@ packages: webgear-core/
           webgear-swagger/
           webgear-openapi/
           webgear-benchmarks/
+          webgear-example-users/
