--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,6 +52,13 @@ jobs:
             .#webgear-openapi-ghc${GHC_VERSION}    \
             .#webgear-benchmarks-ghc${GHC_VERSION}
 
+      - name: Build Examples
+        if: matrix.ghc == '9.6.2'
+        run: |
+          GHC_VERSION=$(echo ${{ matrix.ghc }} | tr -d .)
+          nix build --print-build-logs --no-link      \
+            .#webgear-example-users-ghc${GHC_VERSION}
+
       - name: Benchmark
         run: |
           GHC_VERSION=$(echo ${{ matrix.ghc }} | tr -d .)
@@ -64,7 +71,7 @@ jobs:
           nix develop .#webgear-dev-ghc${GHC_VERSION} --command cabal haddock all
 
       - name: Upload to Hackage
-        if: matrix.ghc == '9.4.4' && startsWith(github.ref, 'refs/tags/v')
+        if: matrix.ghc == '9.6.2' && startsWith(github.ref, 'refs/tags/v')
         run: |
           GHC_VERSION=$(echo ${{ matrix.ghc }} | tr -d .)
           nix develop .#webgear-dev-ghc${GHC_VERSION} --command ./scripts/hackage-upload.sh ${{ secrets.HACKAGE_TOKEN }}
