Moved examples to the monorepo (#30)
This will reduce the maintenance overhead.

--- a/cabal.project
+++ b/cabal.project
@@ -3,3 +3,5 @@ packages: webgear-core/
           webgear-swagger/
           webgear-openapi/
           webgear-benchmarks/
+          webgear-example-users/
+          webgear-example-realworld/
