--- a/webgear-server/webgear-server.cabal
+++ b/webgear-server/webgear-server.cabal
@@ -56,7 +56,6 @@ common webgear-common
   build-depends:      base >=4.13.0.0 && <4.19
                     , base64-bytestring >=1.0.0.3 && <1.3
                     , bytestring >=0.10.10.1 && <0.13
-                    , cookie >=0.4.5 && <0.5
                     , http-types ==0.12.*
                     , text >=1.2.0.0 && <2.2
                     , wai ==3.2.*
@@ -81,6 +80,7 @@ library
   import:             webgear-common
   exposed-modules:    WebGear.Server
                     , WebGear.Server.Handler
+                    , WebGear.Server.MIMEType
                     , WebGear.Server.Traits
                     , WebGear.Server.Trait.Auth.Basic
                     , WebGear.Server.Trait.Auth.JWT
@@ -96,12 +96,17 @@ library
   hs-source-dirs:     src
   build-depends:      aeson >=1.4 && <1.6 || >=2.0 && <2.3
                     , arrows ==0.4.*
+                    , binary >= 0.8.0.0 && <0.9
                     , bytestring-conversion ==0.3.*
+                    , cookie >=0.4.5 && <0.5
                     , http-api-data >=0.4.2 && <0.7
+                    , http-media ==0.8.*
                     , jose >=0.8.3.1 && <0.11
                     , monad-time >=0.3.0.0 && <0.5
                     , mtl >=2.2 && <2.4
+                    , resourcet >=1.2 && <1.4
                     , text-conversions ==0.3.*
+                    , wai-extra ==3.1.*
 
 test-suite webgear-server-test
   import:             webgear-common
