--- a/cabal.project
+++ b/cabal.project
@@ -1,6 +1,7 @@
 packages: webgear-core/
           webgear-server/
           webgear-swagger/
+          webgear-swagger-ui/
           webgear-openapi/
           webgear-benchmarks/
           webgear-example-users/
