--- a/stack-8.10.7.yaml
+++ b/stack-8.10.7.yaml
@@ -4,6 +4,7 @@ packages:
   - ./webgear-core
   - ./webgear-server
   - ./webgear-swagger
+  - ./webgear-swagger-ui
   - ./webgear-openapi
   - ./webgear-benchmarks
 
