--- a/stack-9.2.8.yaml
+++ b/stack-9.2.8.yaml
@@ -4,6 +4,7 @@ packages:
   - ./webgear-core
   - ./webgear-server
   - ./webgear-swagger
+  - ./webgear-swagger-ui
   - ./webgear-openapi
   - ./webgear-benchmarks
 
