--- a/stack-9.6.3.yaml
+++ b/stack-9.6.3.yaml
@@ -4,5 +4,6 @@ packages:
   - ./webgear-core
   - ./webgear-server
   - ./webgear-swagger
+  - ./webgear-swagger-ui
   - ./webgear-openapi
   - ./webgear-benchmarks
