--- a/webgear-swagger-ui/webgear-swagger-ui.cabal
+++ b/webgear-swagger-ui/webgear-swagger-ui.cabal
@@ -46,9 +46,21 @@ source-repository head
 
 library
   exposed-modules:    WebGear.Swagger.UI
+                    , WebGear.Swagger.UI.Embedded
   hs-source-dirs:     src
   default-language:   Haskell2010
   build-depends:      base >=4.13.0.0 && <4.19
+                    , bytestring >=0.10.10.1 && <0.13
+                    , file-embed ==0.0.*
+                    , http-types ==0.12.*
+                    , mime-types ==0.1.*
+                    , text >=1.2.0.0 && <2.2
+                    , webgear-core ==1.1.0
+  default-extensions: Arrows
+                      DataKinds
+                      FlexibleContexts
+                      OverloadedStrings
+                      TypeApplications
   ghc-options:        -Wall
                       -Wno-unticked-promoted-constructors
                       -Wcompat
