Serve api docs using webgear-swagger-ui

--- a/webgear-example-realworld/webgear-example-realworld.cabal
+++ b/webgear-example-realworld/webgear-example-realworld.cabal
@@ -46,6 +46,7 @@ executable realworld
                     , warp
                     , webgear-server
                     , webgear-openapi
+                    , webgear-swagger-ui
   default-extensions: Arrows
                       DataKinds
                       DeriveAnyClass
