Limit haddock only to webgear packages
There are haddock failures on old stack snapshots with scotty

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -125,4 +125,10 @@ jobs:
         run: stack test --system-ghc --ta '--quickcheck-tests 100000'
 
       - name: Haddock
-        run: stack haddock --system-ghc
+        run: |
+          stack haddock --system-ghc \
+            webgear-core             \
+            webgear-server           \
+            webgear-swagger          \
+            webgear-swagger-ui       \
+            webgear-openapi
