--- a/webgear-benchmarks/webgear-benchmarks.cabal
+++ b/webgear-benchmarks/webgear-benchmarks.cabal
@@ -24,7 +24,7 @@ executable users
                     , bytestring >=0.10 && <0.13
                     , criterion >=1.5.0.0 && <1.7
                     , hashable >=1.3 && <1.5
-                    , http-types ==0.12.3
+                    , http-types ==0.12.*
                     , mtl >=2.2.2 && <2.4
                     , text >=1.2.0.0 && <2.2
                     , time
@@ -32,7 +32,7 @@ executable users
                     , servant ==0.20.1
                     , servant-server ==0.20
                     , scotty ==0.20.1
-                    , wai ==3.2.3
+                    , wai ==3.2.*
                     , webgear-server ==1.1.0
   default-extensions: Arrows
                       ConstraintKinds
