--- a/webgear-core/webgear-core.cabal
+++ b/webgear-core/webgear-core.cabal
@@ -53,18 +53,18 @@ common webgear-common
                       TypeApplications
                       TypeFamilies
                       TypeOperators
-  build-depends:      base >=4.13.0.0 && <4.19
+  build-depends:      base >=4.13.0.0 && <4.20
                     , binary >= 0.8.0.0 && <0.9
                     , bytestring >=0.10.10.1 && <0.13
                     , case-insensitive ==1.2.*
                     , cookie >=0.4.5 && <0.5
-                    , filepath ==1.4.*
+                    , filepath >=1.4.* && <1.6
                     , http-api-data >=0.4.2 && <0.7
                     , http-media ==0.8.*
                     , http-types ==0.12.*
                     , network ==3.1.*
                     , tagged ==0.8.*
-                    , template-haskell >=2.15.0.0 && <2.21
+                    , template-haskell >=2.15.0.0 && <2.22
                     , text >=1.2.0.0 && <2.2
                     , wai ==3.2.*
                     , wai-extra ==3.1.*
@@ -107,5 +107,5 @@ library
                     , WebGear.Core.Handler.Static
   hs-source-dirs:     src
   build-depends:      arrows ==0.4.*
-                    , jose >=0.8.3.1 && <0.11
+                    , jose >=0.8.3.1 && <0.12
                     , mime-types ==0.1.*
