--- a/webgear-core/webgear-core.cabal
+++ b/webgear-core/webgear-core.cabal
@@ -58,7 +58,7 @@ common webgear-common
                     , bytestring >=0.10.10.1 && <0.13
                     , case-insensitive ==1.2.*
                     , cookie >=0.4.5 && <0.5
-                    , filepath >=1.4.* && <1.6
+                    , filepath >=1.4.2.1 && <1.6
                     , http-api-data >=0.4.2 && <0.7
                     , http-media ==0.8.*
                     , http-types ==0.12.*
