--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,12 +89,11 @@ jobs:
       - uses: actions/checkout@v3
         name: Checkout Source Code
 
-      - uses: haskell/actions/setup@v2
+      - uses: haskell-actions/setup@v2
         name: Setup Haskell Build Environment
         with:
           ghc-version: ${{ matrix.ghc }}
           enable-stack: true
-          stack-version: 2.9.3
 
       - uses: actions/cache@v3
         name: Cache dependencies
