--- a/webgear-swagger-ui/webgear-swagger-ui.cabal
+++ b/webgear-swagger-ui/webgear-swagger-ui.cabal
@@ -11,7 +11,7 @@ homepage:            https://github.com/haskell-webgear/webgear#readme
 bug-reports:         https://github.com/haskell-webgear/webgear/issues
 author:              Raghu Kaippully
 maintainer:          rkaippully@gmail.com
-copyright:           2023 Raghu Kaippully
+copyright:           2023-2024 Raghu Kaippully
 license:             MPL-2.0
 license-file:        LICENSE
 category:            Web
@@ -49,7 +49,7 @@ library
                     , WebGear.Swagger.UI.Embedded
   hs-source-dirs:     src
   default-language:   Haskell2010
-  build-depends:      base >=4.13.0.0 && <4.20
+  build-depends:      base >=4.13.0.0 && <4.19
                     , bytestring >=0.10.10.1 && <0.13
                     , file-embed ==0.0.*
                     , http-types ==0.12.*
